# ChangeLog for dev-java/j2ssh
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> j2ssh-0.2.9.ebuild,
  metadata.xml:
  Wrap long line; move die out of subshell
