@@ -2,7 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Jun 2013; johann@j-schmitz.net j2ssh-0.2.9.ebuild, metadata.xml:
+  Polished ebuild, install source, doc, examples
+
   11 Jun 2013; Justin Lecher <jlec@gentoo.org> j2ssh-0.2.9.ebuild,
   metadata.xml:
   Wrap long line; move die out of subshell
-
